--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 dj-database-url==0.5.0
 Django==3.2.5
 djangorestframework==3.12.4
+greenlet==1.1.0
 gunicorn==20.1.0
 numpy==1.21.0
 pandas==1.3.0
@@ -10,5 +11,6 @@ python-dateutil==2.8.2
 python-decouple==3.4
 pytz==2021.1
 six==1.16.0
+SQLAlchemy==1.4.21
 sqlparse==0.4.1
 whitenoise==5.3.0
